# pocket_disasm

./: .gitattributes  .gitignore  LICENSE  README.md  install.cmd  install.ps1  pocket.cmd  pyproject.toml
pocket_disasm/: __init__.py  backend.py  cli.py  config.py  daemon.py  diagnostics.py  integrations.py  router.py  supervisor.py  transport.py  ui.py  updates.py
pocket_disasm/assets/: ida_colored.html  ida_compact.html
tests/: test_backend.py  test_config.py  test_daemon.py  test_diagnostics.py  test_installer.py  test_integrations.py  test_router.py  test_supervisor.py  test_transport.py  test_ui.py  test_updates.py
