[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-disasm"
version = "0.2.0"
description = "A lightweight IDALib desktop shell with an IDA Pro MCP-compatible backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pocket Disasm contributors" }]
dependencies = [
  "ida-pro-mcp @ https://github.com/mrexodia/ida-pro-mcp/archive/ab7a648d344d9c7a368634a88abed69fee296c09.zip",
  "idapro==0.0.7",
  "rich>=13.7",
  "textual>=6.0,<7",
]

[project.scripts]
pocket = "pocket_disasm.cli:main"
pocket-disasm = "pocket_disasm.cli:main"

[tool.setuptools.packages.find]
include = ["pocket_disasm*"]

[tool.setuptools.package-data]
pocket_disasm = ["assets/*"]
